added the content of counter app

--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>js-counter</title>
   </head>
-  <body></body>
+  <body>
+    <div id="counter">
+      <div>
+        <div id="display">0</div>
+      </div>
+      <div id="counter-button">
+        <div id="plus">+</div>
+        <div id="erset">reset</div>
+        <div id="minus">-</div>
+      </div>
+    </div>
+    <script src="main.js"></script>
+  </body>
 </html>
