updated the counter-button

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div id="display">0</div>
       </div>
       <div id="counter-button">
-        <div id="plus">+</div>
-        <div id="erset">reset</div>
-        <div id="minus">-</div>
+        <button id="minus">-</button>
+        <button id="reset">reset</button>
+        <button id="plus">+</button>
       </div>
     </div>
     <script src="main.js"></script>
